--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "scaffold:ui": "node scripts/scaffold-ui-primitives.cjs"
+    "scaffold:ui": "node scripts/scaffold-ui-primitives.cjs",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --reporter=verbose --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -73,6 +76,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -84,6 +88,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^3.2.4"
   }
 }
